Fixed close app for Chrome Update the config.properties Add more images